# todo-list

./: .env  Cargo.toml  docker-compose.yml
src/: endpoints.rs  main.rs  model.rs  views.rs
src/components/: page.rs
src/endpoints/: auth.rs  home.rs  root.rs  signup.rs
src/model/: database.rs  session.rs  task.rs  user.rs
src/views/: auth.rs  components.rs  home.rs  signup.rs
src/views/home/: components.rs
