[package]
name = "todo-list"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
cercis = "1.2.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
log = "0.4.22"
serde = { version = "1.0.203", features = ["derive"] }
sha2 = "0.10.8"
simplelog = "0.12.2"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "mysql", "chrono"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
